--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -1016,32 +1016,14 @@ html {
 }
 /* Large Desktop - 1300px */
 @media only screen and (min-width: 81.25rem) {
-  #cs-navigation .cs-container {
-    justify-content: space-between;
-  }
   #cs-navigation .cs-nav-button {
-    margin-left: auto;
     display: block;
   }
 }
 /* Larger Desktop - 1600px */
 @media only screen and (min-width: 100rem) {
-  #cs-navigation .cs-container {
-    width: 100%;
-    max-width: 107.5rem;
-    margin: auto;
-    padding: 0 1rem;
-    /* prevents padding from affectin gheight */
-    box-sizing: border-box;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1.5rem;
-    position: relative;
-  }
   #cs-navigation .cs-nav-button {
-    display: flex;
-    margin-left: auto;
+    display: block;
   }
 }
 /*-- -------------------------- -->
