--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -6,7 +6,7 @@
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Feel Free to Write Us Anytime</span>
-            <h2 class="cs-title">Let us know any questions or request a Estimate</h2>
+            <h2 class="cs-title">Let us know any questions <br> or request a estimate</h2>
         </div>
         <!--Form-->
         <form class="cs-form" id="cs-form-1525" name="Contact Form" method="post">
@@ -22,7 +22,11 @@
                 Email
                 <input class="cs-input" required type="text" id="email-1525" name="email" placeholder="Email">
             </label>
-            <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
+           <label class="cs-label">
+                Message
+                <input class="cs-input" required type="text" id="email-1525" name="email" placeholder="Optional">
+            </label>
+            <button class="cs-button-solid cs-submit" type="submit">Submit</button>
         </form>
     </div>
    
