--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -58,7 +58,7 @@
                             {{ 'cs-active' if 'Gutter-Guards' == page.fileSlug}}
                             {{ 'cs-active' if 'Soffit-Installation' == page.fileSlug}}
                             {{ 'cs-active' if 'Soffit-Repair' == page.fileSlug}}">
-                           Gutter Services
+                           Our Services
                             <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-green.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                         </span>
                         <ul class="cs-drop-ul">
@@ -82,6 +82,11 @@
                                 <a href="/Soffit-Repair" class="cs-li-link cs-drop-link">Soffit Repair</a>
                             </li>
                         </ul>
+                    </li>
+                     <li class="cs-li">
+                        <a href="/projects" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug}}">
+                            Gallery
+                        </a>
                     </li>
                     <li class="cs-li">
                         <a href="/contact" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug}}">
