--- a/src/_includes/components/cta2.html
+++ b/src/_includes/components/cta2.html
@@ -6,11 +6,11 @@
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Our Portfolio</span>
-            <h2 class="cs-title">Want to Work with Our Team?</h2>
+            <h2 class="cs-title">Take a look of what we pride ourselves in</h2>
             <p class="cs-text">
-                We love what we do and we do it with passion. We value the experimentation of the message and smart incentives.
+               We love what we do and we do it with passion. We care about the value of your property and what it means to you.
             </p>
-            <a href="/contact" class="cs-button-solid">Get In Touch</a>
+            <a href="/projects" class="cs-button-solid">Gallery</a>
         </div>
     </div>
     <!--Background Image-->
