--- a/src/assets/css/root2.css
+++ b/src/assets/css/root2.css
@@ -1026,22 +1026,14 @@ html {
 }
 /* Large Desktop - 1300px */
 @media only screen and (min-width: 81.25rem) {
-  #cs-navigation .cs-container {
-    justify-content: space-between;
-  }
   #cs-navigation .cs-nav-button {
-    margin-left: auto;
     display: block;
   }
 }
 /* Larger Desktop - 1600px */
 @media only screen and (min-width: 100rem) {
-  #cs-navigation .cs-donate {
-    display: flex;
-    margin-left: auto;
-  }
   #cs-navigation .cs-nav-button {
-    margin: 0;
+    display: block;
   }
 }
 /*-- -------------------------- -->
