--- a/src/assets/sass/root2.scss
+++ b/src/assets/sass/root2.scss
@@ -1251,12 +1251,8 @@ html {
 /* Large Desktop - 1300px */
 @media only screen and (min-width: 81.25rem) {
     #cs-navigation {
-        .cs-container {
-            justify-content: space-between;
-        }
 
         .cs-nav-button {
-            margin-left: auto;
             display: block;
         }
     }
@@ -1265,13 +1261,11 @@ html {
 /* Larger Desktop - 1600px */
 @media only screen and (min-width: 100rem) {
     #cs-navigation {
-        .cs-donate {
-            display: flex;
-            margin-left: auto;
-        }
+    
+       
 
         .cs-nav-button {
-            margin: 0;
+            display: block;
         }
     }
 }
