--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -9,9 +9,7 @@
             <a aria-label="go back to home" class="cs-logo" href="">
                 <img class="cs-logo-img light" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Logo.png" alt="logo" width="240" height="32">
             </a>
-            <p class="cs-text">
-                Etiam nulla ultrices consequat, posuere nulla. Ac iaculis lorem phasellus ultrices adipiscing viverra sit ut quam. In diam mattis elementum diam at sed ultricies.
-            </p>
+        
         </div>
         <!-- Links -->
         <ul class="cs-nav">
@@ -19,19 +17,16 @@
                 <span class="cs-header">Sitemap</span>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Home</a>
+                <a class="cs-nav-link" href="/">Home</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">About</a>
+                <a class="cs-nav-link" href="/about">About</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Services</a>
+                <a class="cs-nav-link" href="/projects">Portfolio</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Portfolio</a>
-            </li>
-            <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Contact</a>
+                <a class="cs-nav-link" href="/contact">Contact</a>
             </li>
         </ul>
         <!-- Contact Info -->
@@ -40,10 +35,10 @@
                 <span class="cs-header">Contact</span>
             </li>
             <li class="cs-contact-li">
-                <a class="cs-contact-link" href="tel: 123-456-7890">(123) 456-7890</a>
+                <a class="cs-contact-link" href="tel: 941-564-7856">(941) 564-7856</a>
             </li>
             <li class="cs-contact-li">
-                <a class="cs-contact-link" href="mailto:info@codestitch.com">info@codestitch.com</a>
+                <a class="cs-contact-link" href="mailto:noleakgutters@gmail.com">noleakgutters@gmail.com</a>
             </li>
             <!-- Social Media -->
             <li class="cs-contact-li cs-social-group">
