--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -93,6 +93,11 @@
                             Reviews
                         </a>
                     </li>
+                      <li class="cs-li">
+                        <a href="/Warranty" class="cs-li-link {{ 'cs-active' if 'Warranty' == page.fileSlug}}">
+                            Warranty
+                        </a>
+                    </li>
                     <li class="cs-li">
                         <a href="/contact" class="cs-li-link {{ 'cs-active' if 'contact' == page.fileSlug}}">
                             Contact
