--- a/src/_includes/components/cta2.html
+++ b/src/_includes/components/cta2.html
@@ -15,9 +15,9 @@
     </div>
     <!--Background Image-->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/assets/images/Home1.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/Home1.jpg">
-        <img loading="lazy" decoding="async" src="/assets/images/Home1.jpg" alt="cleaner" width="1920" height="660" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/images/CTA2.png">
+        <source media="(min-width: 601px)" srcset="/assets/images/CTA2.png">
+        <img loading="lazy" decoding="async" src="/assets/images/CTA2.png" alt="cleaner" width="1920" height="660" aria-hidden="true">
     </picture>
 </section>
                                 
