--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -9,7 +9,9 @@
             <a aria-label="go back to home" class="cs-logo" href="">
                 <img class="cs-logo-img light" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Logo.png" alt="logo" width="240" height="32">
             </a>
-        
+         <p class="cs-text">
+               Treating Your Home Like Our Own
+            </p>
         </div>
         <!-- Links -->
         <ul class="cs-nav">
