--- a/src/_includes/components/footer2.html
+++ b/src/_includes/components/footer2.html
@@ -10,7 +10,7 @@
                 <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Logo.png" alt="logo" width="240" height="32">
             </a>
             <p class="cs-text">
-                Etiam nulla ultrices consequat, posuere nulla. Ac iaculis lorem phasellus ultrices adipiscing viverra sit ut quam. In diam mattis elementum diam at sed ultricies.
+                 Treating Your Home Like Our Own
             </p>
         </div>
         <!-- Links -->
@@ -37,10 +37,10 @@
                 <span class="cs-header">Contact</span>
             </li>
             <li class="cs-contact-li">
-                <a class="cs-contact-link" href="tel: 123-456-7890">(123) 456-7890</a>
+                <a class="cs-contact-link" href="tel: 941-564-7856">(941) 564-7856</a>
             </li>
             <li class="cs-contact-li">
-                <a class="cs-contact-link" href="mailto:info@codestitch.com">info@codestitch.com</a>
+                <a class="cs-contact-link" href="mailto:noleakgutters@gmail.com">noleakgutters@gmail.com</a>
             </li>
             <!-- Social Media -->
             <li class="cs-contact-li cs-social-group">
