--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -12,9 +12,9 @@
                 </a>
             </div>
             <div class="cs-top-contact">
-               
+            
              
-                <a href="" class="cs-top-link">
+                <a href="tel: 941-564-7856" class="cs-top-link">
                     <img class="cs-link-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/charity-clock-green.svg" alt="logo" width="20" height="20" aria-hidden="true" decoding="async">
                     Call for free consultation <b>(941) 564-7856 </b>
                 </a>
