--- a/src/assets/sass/warranty.scss
+++ b/src/assets/sass/warranty.scss
@@ -7,6 +7,7 @@
   #content-page-713 {
     padding: var(--sectionPadding);
     padding-top: clamp(7rem, 12vw, 12rem);
+    background-color: #fff;
     /* clips the wave background from causing overflow issues when it goes off screen */
     overflow: hidden;
     position: relative;
@@ -218,57 +219,6 @@
     right: auto;
     /* sets the left edge of the element to be at the center line */
     left: 50%;
-  }
-}
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-  body.dark-mode #content-page-713 {
-    background-color: var(--dark);
-  }
-  body.dark-mode #content-page-713 .cs-title,
-  body.dark-mode #content-page-713 .cs-text,
-  body.dark-mode #content-page-713 h2,
-  body.dark-mode #content-page-713 li,
-  body.dark-mode #content-page-713 p {
-    color: var(--bodyTextColorWhite);
-  }
-
-  body.dark-mode #content-page-713 a {
-    color: var(primary);
-  }
-
-  body.dark-mode #content-page-713 h3,
-  body.dark-mode #content-page-713 h4 {
-    color: var(--bodyTextColorWhite);
-  }
-  body.dark-mode #content-page-713 strong {
-    color: var(--bodyTextColorWhite);
-  }
-  body.dark-mode #content-page-713 .cs-color,
-  body.dark-mode #content-page-713 p {
-    color: var(--secondaryLight);
-  }
-  body.dark-mode #content-page-713 p,
-  body.dark-mode #content-page-713 li {
-    color: var(--bodyTextColorWhite);
-    opacity: .8;
-  }
-  body.dark-mode #content-page-713 .cs-picture {
-    border-color: var(--dark);
-    background-color: var(--dark);
-  }
-  body.dark-mode #content-page-713 .cs-picture:before {
-    background-color: var(--dark);
-  }
-  body.dark-mode #content-page-713 .cs-picture:after {
-    background-color: var(--medium);
-  }
-  body.dark-mode #content-page-713 .cs-background {
-    background-color: var(--medium);
-    filter: brightness(70%);
-  }
-  body.dark-mode #content-page-713 .cs-background img {
-    opacity: .1;
   }
 }
 
