--- a/src/assets/css/warranty.css
+++ b/src/assets/css/warranty.css
@@ -183,7 +183,7 @@
   #content-page-713 .cs-background {
     width: 20%;
     height: 100%;
-    background-color: var(--secondary);
+    background-color: var(--primary);
     display: block;
     position: absolute;
     right: 0;
