--- a/src/assets/sass/warranty.scss
+++ b/src/assets/sass/warranty.scss
@@ -185,7 +185,7 @@
   #content-page-713 .cs-background {
     width: 20%;
     height: 100%;
-    background-color: var(--secondary);
+    background-color: var(--primary);
     display: block;
     position: absolute;
     right: 0;
