--- a/src/_includes/components/footer2.html
+++ b/src/_includes/components/footer2.html
@@ -45,13 +45,11 @@
             <!-- Social Media -->
             <li class="cs-contact-li cs-social-group">
                 <div class="cs-social">
-                    <a class="cs-social-link" aria-label="visit google profile" href="">
-                        <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/google.svg" alt="google" width="11" height="11">
-                    </a>
-                    <a class="cs-social-link" aria-label="visit facebook profile" href="">
+
+                    <a class="cs-social-link" aria-label="visit facebook profile" href="https://www.facebook.com/profile.php?id=61556555956370">
                         <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/Facebook.svg" alt="facebook" width="6" height="11">
                     </a>
-                    <a class="cs-social-link" aria-label="visit instagram profile" href="">
+                    <a class="cs-social-link" aria-label="visit instagram profile" href="https://www.instagram.com/noleakgutters/">
                         <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/instagram.svg" alt="instagram" width="11" height="11">
                     </a>
                 </div>
