--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -9,7 +9,7 @@
             <h2 class="cs-title">Let us know any questions <br> or request a estimate</h2>
         </div>
         <!--Form-->
-        <form class="cs-form" id="cs-form-1525" name="Contact Form" method="post">
+        <form class="cs-form" id="cs-form-1525" name="Contact Form" data-netlify="true" method="post">
             <label class="cs-label">
                 Name
                 <input class="cs-input" required type="text" id="name-1525" name="name" placeholder="Name">
