--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -56,6 +56,14 @@
             </li>
         </ul>
     </div>
+        <div class="cs-bottom">
+        <span class="cs-credit">
+            © Copyright 2023 Handcoded By <a href="https://enigmadigital.ca/" class="cs-credit-link" target="_blank">Enigma Digital</a>
+        </span>
+             <div class="cs-bottom-links">
+            <a href="/privacy" class="cs-bottom-link">Privacy Policy</a>
+        </div>
+   
 </footer>
                                 
                                 
